--- a/detailpage.html
+++ b/detailpage.html
@@ -119,23 +119,23 @@
               <ul class="size_wrap">
                 <li>
                   <input type="radio" id="size" class="radio_select">
-                  <label for="size">SS</label>
+                  <label for="size">44</label>
                 </li>
                 <li>
                   <input type="radio" id="size" class="radio_select">
-                  <label for="size">S</label>
+                  <label for="size">48</label>
                 </li>
                 <li>
                   <input type="radio" id="size" class="radio_select">
-                  <label for="size">M</label>
+                  <label for="size">52</label>
                 </li>
                 <li>
                   <input type="radio" id="size" class="radio_select">
-                  <label for="size">L</label>
+                  <label for="size">56</label>
                 </li>
                 <li>
                   <input type="radio" id="size" class="radio_select">
-                  <label for="size">XL</label>
+                  <label for="size">60</label>
                 </li>
               </ul>
               <div class="button_wrapper">
@@ -160,119 +160,135 @@
               <button type="button" class="product_detail_info">
                 <span>제품 상세 정보 더보기</span>
               </button>
-              <!-- <div class="footer-navigations-container">
-                <div class="footer-navigation-wrapper">
-                  <h4 class="footer-navigation-title">사이즈 & 팁
-                    <i class="las la-chevron-down"></i>
-                  </h4>
+              <div class="accordion_wrap">
+                <button class="accordion">
+                  <h3 class="accordion_tit"> 도와드릴까요? </h3>
+                  <i class="las la-chevron-down"></i>
+                </button>
+                <div class="panel">
+                  <ul class="nav_wrap">
+                    <li class="nav_item">
+                      <a href="#" class="tel">전화 문의 080-522-7199</a>
+                    </li>
+                    <li class="nav_item">
+                      <a href="#">문의하기</a>
+                    </li>
+                    <li class="nav_item">
+                      <a href="#">FAQ</a>
+                    </li>
+                    <li class="nav_item">
+                      <a href="#">추가정보</a>
+                    </li>
+                  </ul>
                 </div>
-                <div class="footer-navigation-wrapper">
-                  <h4 class="footer-navigation-title">무료배송 및 반품
-                    <i class="las la-chevron-down"></i>
-                  </h4>
+                <button class="accordion">
+                  <h3 class="accordion_tit">무료배송 및 반품</h3>
+                  <i class="las la-chevron-down"></i>
+                </button>
+                <div class="panel">
+                  <p class="product_exp">
+                    모든 주문은 배송가능한 제품의 재고가 있을 경우에 한해
+                    생성되며 2~3일 영업일 내에 처리됩니다. <br>
+                    예상 배송완료 기간은 실제 배송일 이후 확인 가능합니다. <br>
+                    주문 후 고객님께 전달되는 운송장번호를 통해서 배송 상태를
+                    조회하실수있습니다. <br>
+                    제품 수령일로부터 14일 이내에 당사 지정 배송 업체를
+                    통해서 무상으로 반품하실 수 있습니다. <br>
+                    맟춤 제작된 상품은 주문 확인 후 30일 이내에 배송됩니다. <br>
+                    맟춤 제작된 제품은 맟춤 설정 시 선택한 스타일과 수령한
+                    제품이 다른 경우에만 반품할 수 있습니다. <br>
+                  </p>
                 </div>
-                <div class="footer-navigation-wrapper">
-                  <h4 class="footer-navigation-title">리뷰(3)
-                    <i class="las la-chevron-down"></i>
-                  </h4>
+
+                <button class="accordion">
+                  <h3 class="accordion_tit">익스클루시브 서비스</h3>
+                  <i class="las la-chevron-down"></i>
+                </button>
+                <div class="panel">
+                  <ul class="nav_wrap">
+                    <li class="nav_item">
+                      <a href="#">프리다 서비스</a>
+                    </li>
+                    <li class="nav_item">
+                      <a href="#">주문 추적</a>
+                    </li>
+                    <li class="nav_item">
+                      <a href="#">반품</a>
+                    </li>
+                  </ul>
                 </div>
-                <div class="footer-navigation-wrapper">
-                  <h4 class="footer-navigation-title"> 추가정보
-                    <i class="las la-chevron-down"></i>
-                  </h4>
+                <button class="accordion">
+                  <h3 class="accordion_tit">회사</h3>
+                  <i class="las la-chevron-down"></i>
+                </button>
+                <div class="panel">
+                  <ul class="nav_wrap">
+                    <li class="nav_item">
+                      <a href="#">Fondazione Prada</a>
+                    </li>
+                    <li class="nav_item">
+                      <a href="#">Prada Group</a>
+                    </li>
+                    <li class="nav_item">
+                      <a href="#">Luna Rossa</a>
+                    </li>
+                    <li class="nav_item">
+                      <a href="#">사회적 책임</a>
+                    </li>
+                    <li class="nav_item">
+                      <a href="#">채용정보</a>
+                    </li>
+                  </ul>
                 </div>
-              </div> -->
-              <!-- <div class="wrapper center-block">
-                <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                  <div class="panel panel-default">
-                    <div class="panel-heading active" role="tab" id="headingOne">
-                      <h4 class="panel-title">
-                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
-                          aria-expanded="true" aria-controls="collapseOne">
-                          사이즈 및 팁
-                        </a>
-                      </h4>
-                    </div>
-                    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel"
-                      aria-labelledby="headingOne">
-                      <div class="panel-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-                        3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
-                        laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin
-                        coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
-                        anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
-                        occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard
-                        of them accusamus labore sustainable VHS.
-                      </div>
-                    </div>
+              </div>
+              <div class="meet_styling_wrap">
+                <h2 class="meet_styling_tit">스타일링 만나보기</h2>
+                <p class="meet_styling_intro">Instagram에 사진을 업로드하거나 @PRADA를 멘션해 나의 스타일을 선보일 기회를 노려 보세요.</p>
+                <button type="button" class="upload_now">
+                  <h3 class="upload_tit">사진을업로드하세요.</h3>
+                </button>
+              </div>
+              <div class="swiper mySwiper2">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img
+                      src="https://www.prada.com/content/dam/pradanux_products/U/UMC/UMC149/1JF4F0002/UMC149_1JF4_F0002_S_202_SLF.png/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                      alt="clothslide2" class="clothslide2_img">
                   </div>
-                  <div class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="headingTwo">
-                      <h4 class="panel-title">
-                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
-                          href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                          무료배송 및 반품
-                        </a>
-                      </h4>
-                    </div>
-                    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                      <div class="panel-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-                        3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
-                        laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin
-                        coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
-                        anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
-                        occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard
-                        of them accusamus labore sustainable VHS.
-                      </div>
-                    </div>
+                  <div class="swiper-slide">
+                    <img
+                      src=" https://www.prada.com/content/dam/pradabkg_products/U/UMB/UMB264/1ZLEF0008/UMB264_1ZLE_F0008_S_212_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                      alt="clothslide2" class="clothslide2_img">
                   </div>
-                  <div class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="headingThree">
-                      <h4 class="panel-title">
-                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
-                          href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                          리뷰
-                        </a>
-                      </h4>
-                    </div>
-                    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel"
-                      aria-labelledby="headingThree">
-                      <div class="panel-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-                        3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
-                        laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin
-                        coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
-                        anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
-                        occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard
-                        of them accusamus labore sustainable VHS.
-                      </div>
-                    </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="https://www.prada.com/content/dam/pradabkg_products/U/UMB/UMB481/11J6F0UB0/UMB481_11J6_F0UB0_S_231_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                      alt="clothslide2" class="clothslide2_img">
                   </div>
-                  <div class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="headingThree">
-                      <h4 class="panel-title">
-                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
-                          href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                          추가정보
-                        </a>
-                      </h4>
-                    </div>
-                    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel"
-                      aria-labelledby="headingFour">
-                      <div class="panel-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-                        3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
-                        laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin
-                        coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
-                        anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
-                        occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard
-                        of them accusamus labore sustainable VHS.
-                      </div>
-                    </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="https://www.prada.com/content/dam/pradabkg_products/U/UMP/UMP67/1JF4F0002/UMP67_1JF4_F0002_S_202_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                      alt="clothslide2" class="clothslide2_img">
+                  </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG193/12I7F0002/UMG193_12I7_F0002_S_231_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                      alt="clothslide2" class="clothslide2_img">
+                  </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG026/1JF4F0002/UMG026_1JF4_F0002_S_202_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                      alt="clothslide2" class="clothslide2_img">
+                  </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG170/11SVF0008/UMG170_11SV_F0008_S_221_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                      alt="clothslide2" class="clothslide2_img">
                   </div>
                 </div>
-              </div> -->
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+              </div>
             </div>
           </section>
         </div>
