--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <div class="img-tit4">PRADA GALLERIA</div>
                   </a>
                   <a href="#" class="btn-pur2">
-                    구매하기
+                    BUY
                   </a>
                   </p>
                 </div>
