--- a/detailpage.html
+++ b/detailpage.html
@@ -208,6 +208,66 @@
                 <button type="button" class="product_detail_info">
                   <span>제품 상세 정보 더보기</span>
                 </button>
+                <div class="view_image_wrap">
+                  <h3 class="product_info">상품정보</h3>
+                  <h3 class="model_img_tit">Model image</h3>
+                  <span class="model_img_exp"
+                    >모델 착용 이미지보다 제품컷 이미지의 컬러가
+                    정확합니다.</span
+                  >
+                  <ul>
+                    <li>
+                      <div class="thumb">
+                        <img
+                          src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                          alt="imginfo"
+                        />
+                      </div>
+                    </li>
+                    <li>
+                      <div class="thumb">
+                        <img
+                          src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_MDF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
+                          alt="imginfo"
+                        />
+                      </div>
+                    </li>
+                    <li>
+                      <div class="thumb">
+                        <img
+                          src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_MDD.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                          alt="imginfo"
+                        />
+                      </div>
+                    </li>
+                    <li>
+                      <div class="thumb">
+                        <img
+                          src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_MDDA.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                          alt="imginfo"
+                        />
+                      </div>
+                    </li>
+                    <li>
+                      <div class="thumb">
+                        <img
+                          src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_MDB.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                          alt="imginfo"
+                        />
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+                <div class="meet_styling_wrap">
+                  <h2 class="meet_styling_tit">스타일링 만나보기</h2>
+                  <p class="meet_styling_intro">
+                    Instagram에 사진을 업로드하거나 @PRADA를 멘션해 나의
+                    스타일을 선보일 기회를 노려 보세요.
+                  </p>
+                  <button type="button" class="upload_now">
+                    <h3 class="upload_tit">사진을업로드하세요.</h3>
+                  </button>
+                </div>
                 <div class="accordion_wrap">
                   <button class="accordion">
                     <h3 class="accordion_tit">도와드릴까요?</h3>
@@ -291,17 +351,7 @@
                     </ul>
                   </div>
                 </div>
-                <div class="meet_styling_wrap">
-                  <h2 class="meet_styling_tit">스타일링 만나보기</h2>
-                  <p class="meet_styling_intro">
-                    Instagram에 사진을 업로드하거나 @PRADA를 멘션해 나의
-                    스타일을 선보일 기회를 노려 보세요.
-                  </p>
-                  <button type="button" class="upload_now">
-                    <h3 class="upload_tit">사진을업로드하세요.</h3>
-                  </button>
-                </div>
-                <h2>관련 항목</h2>
+                <h2 class="related_list_tit">관련 항목</h2>
                 <div class="swiper mySwiper2">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -354,8 +404,7 @@
                       />
                     </div>
                   </div>
-                  <div class="swiper-button-next"></div>
-                  <div class="swiper-button-prev"></div>
+                  <div class="swiper-scrollbar"></div>
                 </div>
               </div>
             </section>
