--- a/detailpage.html
+++ b/detailpage.html
@@ -219,14 +219,6 @@
                     <li>
                       <div class="thumb">
                         <img
-                          src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
-                          alt="imginfo"
-                        />
-                      </div>
-                    </li>
-                    <li>
-                      <div class="thumb">
-                        <img
                           src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_MDF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
                           alt="imginfo"
                         />
@@ -252,6 +244,15 @@
                       <div class="thumb">
                         <img
                           src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_MDB.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                          alt="imginfo"
+                        />
+                      </div>
+                    </li>
+                    <h3 class="Product_img_tit">Product image</h3>
+                    <li>
+                      <div class="thumb">
+                        <img
+                          src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
                           alt="imginfo"
                         />
                       </div>
@@ -360,6 +361,8 @@
                         alt="clothslide2"
                         class="clothslide2_img"
                       />
+                      <h2 class="product_name">울 카디건</h2>
+                      <h2 class="product_price">₩ 2,800,000</h2>
                     </div>
                     <div class="swiper-slide">
                       <img
@@ -367,6 +370,10 @@
                         alt="clothslide2"
                         class="clothslide2_img"
                       />
+                      <h2 class="product_name">
+                        슈퍼파인 울 <br />크루넥 스웨터
+                      </h2>
+                      <h2 class="product_price">₩ 1,840,000</h2>
                     </div>
                     <div class="swiper-slide">
                       <img
@@ -374,6 +381,11 @@
                         alt="clothslide2"
                         class="clothslide2_img"
                       />
+                      <h2 class="product_name">
+                        울 및 캐시미어 <br />
+                        크루넥 스위터
+                      </h2>
+                      <h2 class="product_price">₩ 3,050,000</h2>
                     </div>
                     <div class="swiper-slide">
                       <img
@@ -381,6 +393,11 @@
                         alt="clothslide2"
                         class="clothslide2_img"
                       />
+                      <h2 class="product_name">
+                        울 및 리나일론 <br />
+                        개버딘 팬츠
+                      </h2>
+                      <h2 class="product_price">₩ 2,450,000</h2>
                     </div>
                     <div class="swiper-slide">
                       <img
@@ -388,13 +405,23 @@
                         alt="clothslide2"
                         class="clothslide2_img"
                       />
+                      <h2 class="product_name">
+                        울 및 캐시미어 <br />
+                        카디건
+                      </h2>
+                      <h2 class="product_price">₩ 3,650,000</h2>
                     </div>
                     <div class="swiper-slide">
                       <img
-                        src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG026/1JF4F0002/UMG026_1JF4_F0002_S_202_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                        src="https://www.prada.com/content/dam/pradabkg_products/S/SGB/SGB685/1WQ8F0002/SGB685_1WQ8_F0002_S_211_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
                         alt="clothslide2"
                         class="clothslide2_img"
                       />
+                      <h2 class="product_name">
+                        리나일론 후드 <br />
+                        블루종 재킷
+                      </h2>
+                      <h2 class="product_price">₩ 3,300,000</h2>
                     </div>
                     <div class="swiper-slide">
                       <img
@@ -402,6 +429,8 @@
                         alt="clothslide2"
                         class="clothslide2_img"
                       />
+                      <h2 class="product_name">실크 카디건</h2>
+                      <h2 class="product_price">₩ 3,850,000</h2>
                     </div>
                   </div>
                   <div class="swiper-scrollbar"></div>
