--- a/payment.html
+++ b/payment.html
@@ -1,159 +1,254 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PRADA</title>
-    <meta
-      name="description"
-      content="네이버 메인에서 다양한 정보와 유용한 컨텐츠를 만나 보세요"
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="페이지 제목" />
-    <meta property="og:description" content="페이지 설명" />
-    <meta
-      property="og:image"
-      content="http://www.mysite.com/article/article1_featured_image.jpg"
-    />
-    <meta
-      property="og:url"
-      content="http://www.mysite.com/article/article1.html"
-    />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="페이지 제목" />
-    <meta name="twitter:description" content="페이지 설명" />
-    <meta
-      name="twitter:image"
-      content="http://www.mysite.com/article/article1.html"
-    />
-    <meta name="twitter:domain" content="사이트 명" />
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Staatliches&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Round"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
-    />
-    <link rel="stylesheet" href="./dist/css/comm.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script defer src="./dist/js/include.js"></script>
-    <script defer src="./dist/js/comm.js"></script>
-  </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PRADA</title>
+  <meta name="description" content="네이버 메인에서 다양한 정보와 유용한 컨텐츠를 만나 보세요" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="페이지 제목" />
+  <meta property="og:description" content="페이지 설명" />
+  <meta property="og:image" content="http://www.mysite.com/article/article1_featured_image.jpg" />
+  <meta property="og:url" content="http://www.mysite.com/article/article1.html" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="페이지 제목" />
+  <meta name="twitter:description" content="페이지 설명" />
+  <meta name="twitter:image" content="http://www.mysite.com/article/article1.html" />
+  <meta name="twitter:domain" content="사이트 명" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Staatliches&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Round"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+  <link rel="stylesheet"
+    href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
+  <link rel="stylesheet" href="./dist/css/comm.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+  <script defer src="./dist/js/include.js"></script>
+  <script defer src="./dist/js/comm.js"></script>
+</head>
+
 </html>
 
-  <body>
-    <div id="u-skip">
-      <a href="#gnb"><span>주요메뉴 바로가기</span></a>
-      <a href="#main"><span>컨텐츠 바로가기</span></a>
-      <a href="#footer"><span>풋터 바로가기</span></a>
-    </div>
-    <div class="wrap" id="payment_wrap">
-      <!-- logo 왼쪽 type -->
-      <header data-include-path="./outline/header.html"></header>
-      <main id="main">
-        <section class="order_wrap">
-         <details open>
-            <summary>
-                <h2>주문상품</h2>
-                <p>
-                    <span class="goods">캐시미어가디건(UMG263_13J6_F0040_S_232)</span>
-                    <span>
-                        포함
-                        <em>1건</em>
-                    </span>
-                </p>
-            </summary>
-            <ul>
-                <li>
-                    <div class="order-pd">
-                        <div class="thumbs-img">
-                            <img src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg" alt="pd-img">
-                        </div>
-                        <div class="pd-info">
-                            <div class="pd-item-info">
-                                <div class="pd-name">
-                                    <span>캐시미어가디건</span>
-                                    (UMG263_13J6_F0040_S_232)
-                                </div>
-                                <div class="pd-option">
-                                    <span class="pd-option-color">
-                                        <span>카멜브라운</span>
-                                    </span>
-                                    <span class="pd=option-size">
-                                        <span>CamelBrown/44</span>
-                                    </span>
-                                    <span class="pd-option-qt">
-                                        <span>1개</span>
-                                    </span>
-                                </div>
-                                <div class="order-shipping">
-                                    입점 파트너에서 출고예정
-                                </div>
-                                <div class="order-pd-price">
-                                    <span>3,850,000 원</span>
-                                </div>
-                            </div>
-                        </div>
+<body>
+  <div id="u-skip">
+    <a href="#gnb"><span>주요메뉴 바로가기</span></a>
+    <a href="#main"><span>컨텐츠 바로가기</span></a>
+    <a href="#footer"><span>풋터 바로가기</span></a>
+  </div>
+  <div class="wrap" id="payment_wrap">
+    <!-- logo 왼쪽 type -->
+    <header data-include-path="./outline/header.html"></header>
+    <main id="main">
+      <section class="order_wrap">
+        <details open>
+          <summary>
+            <h2>주문상품</h2>
+            <p>
+              <span class="goods">캐시미어가디건(UMG263_13J6_F0040_S_232)</span>
+              <span>
+                포함
+                <em>1건</em>
+              </span>
+            </p>
+          </summary>
+          <ul>
+            <li>
+              <div class="order-pd">
+                <div class="thumbs-img">
+                  <img
+                    src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                    alt="pd-img">
+                </div>
+                <div class="pd-info">
+                  <div class="pd-item-info">
+                    <div class="pd-name">
+                      <span>캐시미어가디건</span>
+                      (UMG263_13J6_F0040_S_232)
                     </div>
-                </li>
-            </ul>
-         </details>
-         <section class="delivery_warp">
-         <div class="delivery_info">
+                    <div class="pd-option">
+                      <span class="pd-option-color">
+                        <span>카멜브라운</span>
+                      </span>
+                      <span class="pd=option-size">
+                        <span>CamelBrown/44</span>
+                      </span>
+                      <span class="pd-option-qt">
+                        <span>1개</span>
+                      </span>
+                    </div>
+                    <div class="order-shipping">
+                      입점 파트너에서 출고예정
+                    </div>
+                    <div class="order-pd-price">
+                      <span>3,850,000 원</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </details>
+        <section class="delivery_warp">
+          <div class="delivery_info">
             <h2>배송지정보</h2>
             <div class="btn-delivery">
-              <a class="delivery_btn" href="#">입력</a>  
+              <a class="delivery_btn" href="#">입력</a>
             </div>
-         </div>
-         <p class="list-empty">
+          </div>
+          <p class="list-empty">
             등록된 배송지가 없습니다. <br>
             배송지를 신규 입력해 주세요.
-         </p>
-         </section>
-         <div class="apply_coupon_wrap">
+          </p>
+        </section>
+        <div class="apply_coupon_wrap">
+          <div class="coupon_mini_wrap">
             <h2>
-                쿠폰
-                <span class="available_coupon">1장</span>
+              쿠폰
+              <span class="available_coupon">1장</span>
             </h2>
             <a class="coupon_choice" href="#">쿠폰선택</a>
-            <ul>
-                <li>
-                    할인혜택
-                    <span>6,000 원</span>
-                </li>
-               <li>
-                    배송비쿠폰
-                    <span>0 원</span>
-                </li>
-            </ul>
-         </div>
-        </section>
+          </div>
+          <ul>
+            <li>
+              할인혜택
+              <span>7,000 원</span>
+            </li>
+            <li>
+              배송비쿠폰
+              <span>0 원</span>
+            </li>
+          </ul>
+        </div>
+        <div class="how_to_pay_wrap">
+          <div class="pay_mini_wrap">
+            <h2 class="pay_method">결제수단</h2>
+            <div class="card_Benefits">카드혜택</div>
+          </div>
+          <ul class="paymentlist">
+            <li>
+              <label class="card">
+              <input type="radio" name="payMnCd" id="CREDT_CARD_PAY" value="CREDT_CARD_PAY" checked="checked" onclick="jsSelectPay(this);">
+              <span>신용카드</span>
+              <em></em>
+              </label>
+            </li>
+            <li class="sspay_paymncd_wrap">
+              <label class="ss">
+              <input type="radio" name="payMnCd" id="SS_PAY" value="SS_PAY"  onclick="jsSelectPay(this);">
+              <span>삼성페이</span>
+              <em></em>
+              </label>
+            </li>
+            <li>
+              <label class="kakao">
+              <input type="radio" name="payMnCd" id="KAKAO_PAY" value="KAKAO_PAY" onclick="jsSelectPay(this);">
+              <span>카카오페이</span>
+              <em></em>
+              </label>
+            </li>
+            <li>
+              <label class="toss">
+              <input type="radio" name="payMnCd" id="TOSS_PAY" value="TOSS_PAY"  onclick="jsSelectPay(this);">
+              <span>토스페이</span>
+              <em></em>
+              </label>
+            </li>
+            <li>
+              <label class="payco">
+              <input type="radio" name="payMnCd" id="PAYCO" value="PAYCO" onclick="jsSelectPay(this);">
+              <span>페이코</span>
+              <em></em>
+              </label>
+            </li>
+            <li>
+              <label class="naver">
+              <input type="radio" name="payMnCd" id="NAVER_PAY" value="NAVER_PAY"  onclick="jsSelectPay(this);">
+              <span>네이버페이</span>
+              <em></em>
+              </label>
+            </li>
+            <li>
+              <label class="account">
+              <input type="radio" name="payMnCd" id="RLTM_BNK_ACCT_PAY" value="RLTM_BNK_ACCT_PAY" onclick="jsSelectPay(this);">
+              <span>계좌이체</span>
+              <em></em>
+              </label>
+            </li>
+            <li>
+              <label class="deposit">
+              <input type="radio" name="payMnCd" id="VIRTL_BNK_ACCT_PAY" value="VIRTL_BNK_ACCT_PAY" onclick="jsSelectPay(this);">
+              <span>무통장입금</span>
+              <em></em>
+              </label>
+            </li>
+            <li>
+              <label class="phone">
+              <input type="radio" name="payMnCd" id="MOBIL_PON_PAY" value="MOBIL_PON_PAY"  onclick="jsSelectPay(this);">
+              <span>휴대폰결제</span>
+              <em></em>
+              </label>
+            </li>
+          </ul>
+          <label class="cb_default">
+            <input type="checkbox" value="Y">
+            <span class="label">
+              기본결제수단으로 사용
+            </span>
+          </label>
+        </div>
+        <div class="payment-clap">
+          <h2 class="pay_info_tit">결제정보</h2>
+          <ul class="payment-sum">
+            <li>
+              <span class="label">상품금액</span>
+              <span class="val">
+                <span class="order_sum">3,850,000</span>
+                <span>원</span>
+              </span>
+            </li>
+            <li>
+              <span class="label">배송비</span>
+              <span class="val">
+                <span class="order_sum">0</span>
+                <span>원</span>
+              </span>
+            </li>
+            <li>
+              <span class="label">할인금액</span>
+              <span class="val">
+                <span class="order_sum">-7000</span>
+                <span>원</span>
+              </span>
+            </li>
+          </ul>
+          <ul class="payment-total">
+            <li id="pay_sum">
+              <span class="label">총 결제금액</span>
+              <span class="val">
+                <span class="order_sum">3,843,000</span>
+                <span>원</span>
+              </span>
+            </li>
+          </ul>
+        </div>
+        <div class="consent">
+          <h2 class="pay_display">구매 및 결제대행서비스 이용약관</h2>
+          <div class="basic pay_display"></div> 
+        </div>
+      </section>
     </main>
-</div>
-<div class="section-contents">
-  <footer data-include-path="./outline/footer.html"></footer>
-</div>
-  </body>
+  </div>
+  <div class="section-contents">
+    <footer data-include-path="./outline/footer.html"></footer>
+  </div>
+</body>
+
 </html>
