--- a/detailpage.html
+++ b/detailpage.html
@@ -136,7 +136,7 @@
                       name="color"
                       class="blind"
                     />
-                    <label for="color1" class="color1">(1) CamelBrown</label>
+                    <label for="color1" class="color1"> CamelBrown</label>
                   </li>
                   <li>
                     <input
@@ -145,7 +145,7 @@
                       name="color"
                       class="blind"
                     />
-                    <label for="color2" class="color2">(1) CamelBrown</label>
+                    <label for="color2" class="color2"> Black</label>
                   </li>
                 </ul>
               </div>
