--- a/cart.html
+++ b/cart.html
@@ -74,6 +74,7 @@
       <header data-include-path="./outline/header.html"></header>
       <main id="main">
         <div class="cart_buy_list_wrap">
+          <div class="inner">
          <div class="toggle-area">
             <span>상품상세</span>
             <a href="#" class="icon"></a>
@@ -126,6 +127,7 @@
          </div>
         </div>
         <div class="coupon_wrap">
+          <div class="inner">
             <h2 class="coupon_tit">쿠폰 코드</h2>
             <form class="promo-form" action="/cart/promo" method="POST">
                 <div class="row code_wrap">
@@ -137,8 +139,10 @@
                     </div> 
                 </div>
             </form>
+          </div>
         </div>
         <div class="cart-order_wrap">
+          <div class="inner">
             <h2 class="cart_order_tit">주문 상세내역</h2>
             <p class="list-item">
                 총 상품 금액(1)
@@ -164,10 +168,10 @@
             <a class="shipping_more_btn" href="#">쇼핑 계속하기</a>
             <p class="cart-dec">실 결제 금액은 주문서 내 고객님의 쿠폰/할인 적용에 따라 달라집니다.</p>
         </div>
+      </div>
+        </div>
     </main>
 </div>
-<div class="section-contents">
   <footer data-include-path="./outline/footer.html"></footer>
-</div>
   </body>
 </html>
