--- a/payment.html
+++ b/payment.html
@@ -48,6 +48,7 @@
     <header data-include-path="./outline/header.html"></header>
     <main id="main">
       <section class="order_wrap">
+        <div class="inner">
         <details open>
           <summary>
             <h2>주문상품</h2>
@@ -239,16 +240,54 @@
             </li>
           </ul>
         </div>
-        <div class="consent">
+        <section class="consent">
           <h2 class="pay_display">구매 및 결제대행서비스 이용약관</h2>
-          <div class="basic pay_display"></div> 
+          <div class="basic pay_display">
+            <p class="buy_agree_check2">
+              개인정보 수집 및 이용 동의
+              <a href="#">약관보기</a>
+            </p>
+            <p class="buy_agree_check2">
+              개인정보 제공 및 위탁 동의
+              <a href="#">약관보기</a>
+            </p>
+            <p class="buy_agree_check2">
+              전자금융거래 이용약관
+              <a href="#">약관보기</a>
+            </p>
+          </div>
+          <div class="additional">
+          <p class="buy_agree_check">
+            <label class="check_box">
+              <input type="checkbox" id="btnAgreeAddress" value="Y">
+              <label for="btnAgreeAddress">
+                주소정보 수집 및 이용 동의
+            </label>
+            <a href="#"></a>
+          </p>
+          <p class="buy_agree_check">
+            <label class="check_box">
+              <input type="checkbox" id="btnAgreeAddress" value="Y">
+              <label for="btnAgreeAddress">
+                구매동의(필수)
+            </label>
+            <a href="#"></a>
+          </p>
+          </div>
+           <p class="pay_txt">위 주문내용을 확인하였으며 결제에 동의합니다.</p>
+           <div class="btn_box">
+           <button type="button" id="doPayment" class="btn_primary">
+            <span class="span_pay_sum_total">
+              3,843,000원 결제하기
+            </span>
+           </button>
+          </div>
+        </div>
         </div>
       </section>
     </main>
   </div>
-  <div class="section-contents">
     <footer data-include-path="./outline/footer.html"></footer>
-  </div>
 </body>
 
 </html>
