--- a/outline/header.html
+++ b/outline/header.html
@@ -31,8 +31,95 @@
         </label>
         <div id="gnb">
           <a href="">
-            <img src="/images/comm/SVG/prada white.svg" alt="PRADA" class="img-logo" />
+            <img
+              src="/images/comm/SVG/prada white.svg"
+              alt="PRADA"
+              class="img-logo"
+            />
           </a>
+          <!-- <div class="heder_accordion_wrap">
+            <button class="header_accordion">
+              <h3 class="nav_accordion_tit">도와드릴까요?</h3>
+              <i class="las la-chevron-down"></i>
+            </button>
+            <div class="panel">
+              <ul class="nav_wrap">
+                <li class="nav_item">
+                  <a href="#" class="tel">전화 문의 080-522-7199</a>
+                </li>
+                <li class="nav_item">
+                  <a href="#">문의하기</a>
+                </li>
+                <li class="nav_item">
+                  <a href="#">FAQ</a>
+                </li>
+                <li class="nav_item">
+                  <a href="#">추가정보</a>
+                </li>
+              </ul>
+            </div>
+            <button class="header_accordion">
+              <h3 class="nav_accordion_tit">무료배송 및 반품</h3>
+              <i class="las la-chevron-down"></i>
+            </button>
+            <div class="panel">
+              <p class="product_exp">
+                모든 주문은 배송가능한 제품의 재고가 있을 경우에 한해 생성되며
+                2~3일 영업일 내에 처리됩니다. <br />
+                예상 배송완료 기간은 실제 배송일 이후 확인 가능합니다.
+                <br />
+                주문 후 고객님께 전달되는 운송장번호를 통해서 배송 상태를
+                조회하실수있습니다. <br />
+                제품 수령일로부터 14일 이내에 당사 지정 배송 업체를 통해서
+                무상으로 반품하실 수 있습니다. <br />
+                맟춤 제작된 상품은 주문 확인 후 30일 이내에 배송됩니다.
+                <br />
+                맟춤 제작된 제품은 맟춤 설정 시 선택한 스타일과 수령한 제품이
+                다른 경우에만 반품할 수 있습니다. <br />
+              </p>
+            </div>
+
+            <button class="header_accordion">
+              <h3 class="nav_accordion_tit">익스클루시브 서비스</h3>
+              <i class="las la-chevron-down"></i>
+            </button>
+            <div class="panel">
+              <ul class="nav_wrap">
+                <li class="nav_item">
+                  <a href="#">프리다 서비스</a>
+                </li>
+                <li class="nav_item">
+                  <a href="#">주문 추적</a>
+                </li>
+                <li class="nav_item">
+                  <a href="#">반품</a>
+                </li>
+              </ul>
+            </div>
+            <button class="header_accordion">
+              <h3 class="nav_accordion_tit">회사</h3>
+              <i class="las la-chevron-down"></i>
+            </button>
+            <div class="panel">
+              <ul class="nav_wrap">
+                <li class="nav_item">
+                  <a href="#">Fondazione Prada</a>
+                </li>
+                <li class="nav_item">
+                  <a href="#">Prada Group</a>
+                </li>
+                <li class="nav_item">
+                  <a href="#">Luna Rossa</a>
+                </li>
+                <li class="nav_item">
+                  <a href="#">사회적 책임</a>
+                </li>
+                <li class="nav_item">
+                  <a href="#">채용정보</a>
+                </li>
+              </ul>
+            </div>
+          </div> -->
           <ul class="lst-categ">
             <li class="categ-item">
               <a href="#">MAN</a>
